--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "next": "15.5.4",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
+    "react-countup": "^6.5.3",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.64.0",
+    "recharts": "^2.15.4",
     "sonner": "^2.0.7",
     "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1",
