--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.545.0",
+    "motion": "^12.23.24",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
@@ -34,6 +36,7 @@
     "sonner": "^2.0.7",
     "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1",
+    "tailwindcss-animated": "^2.0.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
